New message for the combined commit

--- a/Album-Page-Two.html
+++ b/Album-Page-Two.html
@@ -51,16 +51,7 @@
             <!--Cheer Up MV - vídeo do youtube-->
             <section class="videoDoMv">
                 <h2 class="tituloMV">• <span>Cheer Up</span> •</h2>
-                <video class="cheerUpMv" controls poster="./assets/imagens/capa-mv-cheer-up.jpg">
-                    <source src="./assets/videos/CHEER-UP-MV.mp4" type="video/mp4">
-                    <source src="assets/videos/CHEER-UP-MV.webm" type="video/webm">
-                    <source src="./assets/videos/CHEER-UP-MV.ogg" type="video/ogg">
-                    <object>
-                      <embed src="CHEER-UP-MV.mp4" type="application/x-shockwave-flash" 
-                      allowfullscreen="false" allowscriptaccess="always">  		
-                    </object>
-                    Formato não suportado  
-                </video>   
+                <img class="cheerUpMv" src="./assets/imagens/capa-mv-cheer-up.jpg" alt="Cheer Up - MV capa">
                 <span class="dataLancamento">Lançamento: 24/04/2016</span>  
             </section>
             <!--Stage twice-->
