--- a/Pagina-Inicial.html
+++ b/Pagina-Inicial.html
@@ -5,110 +5,94 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="imagem/png" href="./assets/imagens/logo-twice-app-page-two.png" />
+    <title>Página Inicial</title>
+    <link rel="icon" type="imagem/png" href="./assets/imagens/logo-twice-app-page-two.png"/>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Oooh+Baby&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/folha-de-estilo-do-twice-app.css">
 </head>
 <body>
-    <main>
-        <div class="container1">
-            <section class="overlay">
-                <!--Menu do site-->
-                <div class="menus">
-                    <div class="containerMenu">
-                        <div class="menu">
-                            <!--Definindo a logo-->
-                            
-                            <section class="containerLogo">
-                                <img class="logo" src="./assets/imagens/logo-twiceapp.svg" alt="Imagem da logo 'Twice App'">
-                                
-                            </section>
-                            <section>
-                                <h2 class="textoDa Logo1">TWICE APP</h1>
-                            </section>
-                            <!--Definindo o perfil-->
-                            <section class="perfil">
-                                    <img src="./assets/imagens/igor.jpeg" alt="Imagem do perfl">
-                            </section>
-                        </div>
-                        <div class="menu temas">
-                            <ul>
-                                <li>
-                                    <a href="#">
-                                        <img style="width: 25px; height: 25px;margin: 0 10px; background-color: #6791DB; padding: 7px; border-radius: 30px;" src="./assets/imagens/temas.png" alt="">
-                                    </a>
-                                    <ul>
-                                        <li><div class="circulo azul"></div></li>
-                                        <li><div class="circulo vermelho"></div></li>
-                                        <li><div class="circulo rosa"></div></li>
-                                        <li><div class="circulo laranja"></div></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                            <a href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#6791DB" class="configuracoes" viewBox="0 0 16 16">
-                                    <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                    <nav class="menuDeNavegacao inicial">
+    <section class="container1">
+        <!--div para deixar o fundo escuro-->
+        <div class="overlay">
+            <!--Conteiner para organizar os menus do site-->
+            <header class="menus">
+                <!--Menu principal-->
+                <div class="menu">
+                        <img class="logo" src="./assets/imagens/logo-twiceapp.svg" alt="Imagem da logo 'Twice App'">
+                        <h2 class="textoDaLogo">TWICE APP</h1>
+                    <div class="menu temas">
                         <ul>
-                            <li><a href="https://youtu.be/c7rCyll5AeY" target="_blank">MVs</a></li>
-                            <li><a href="https://youtube.com/playlist?list=PL5IK6E_XM1PvnN6tEseDGYnB3rkO2qg7W" target="_blank">STAGES</a></li>
-                            <li><a href="#tracklist" target="_blank">TRACKLIST</a></li>
-                            <li><a href="#photoshootDoAlbum" target="_blank">PHOTOSHOOT</a></li>
+                            <li>
+                                <a href="#">
+                                    <img style="width: 23px; height: 23px;margin-right: 5px; background-color: #6791DB; padding: 7px; border-radius: 30px;" src="./assets/imagens/temas.png" alt="">
+                                </a>
+                                <ul>
+                                    <li><div class="circulo azul"></div></li>
+                                    <li><div class="circulo vermelho"></div></li>
+                                    <li><div class="circulo rosa"></div></li>
+                                    <li><div class="circulo laranja"></div></li>
+                                </ul>
+                            </li>
                         </ul>
-                    </nav>
+                        <a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="#6791DB" class="modo" viewBox="0 0 16 16">
+                                <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
-                <div class="bemvindo">
-                    <h1>Bem-vindo(a) ao <span class="textoDa Logo2">TWICE APP</span>!</h1>
-                    <p>Encontre seu album favorito do Twice aqui!</p>
-                    <input class="barraDePesquisa" type="text" placeholder="Pesquise músicas, albuns, photoshoots e mais!">
-                    <button type="button">Vamos lá!</button>
-                </div>
-            </section>
+                <!--Menu de Navegação-->
+                <nav class="menuDeNavegacao inicial">
+                    <ul>
+                        <li>
+                            <a href="#membros" target="_blank">MEMBROS</a>
+                        </li>
+                        <span class="miniBorda"></span>
+                        <li>
+                            <a href="https://youtu.be/c7rCyll5AeY" target="_blank">MVs</a>
+                        </li>
+                        <span class="miniBorda"></span>
+                        <li>
+                            <a href="#tracklist" target="_blank">DISCOGRAFIA</a>
+                        </li>
+                        <span class="miniBorda"></span>
+                        <li>
+                            <a href="https://youtube.com/playlist?list=PL5IK6E_XM1PvnN6tEseDGYnB3rkO2qg7W" target="_blank">STAGES</a>
+                        </li>
+                        <span class="miniBorda"></span>
+                        <li>
+                            <a href="#photoshootDoAlbum" target="_blank">PHOTOSHOOT</a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+            <!--conteiner para organizar o testo de bem-vindo-->
+            <div class="bemvindo">
+                <h1>Bem-vindo(a) ao <span class="textoDaLogo" style="font-size: 40px;">TWICE APP</span>!</h1>
+                <p>Encontre seu album favorito do Twice aqui!</p>
+                <input class="barraDePesquisa" type="text" placeholder="Pesquise músicas, albuns, photoshoots e mais!">
+                <button type="button">Vamos lá!</button>
+            </div>
+            <div class="containerVersao">Versão: <span id="versao">Study About Love</span></div>
         </div>
+    </section>
+
+    <!--Seção de conteúdos que o site/app oferece-->
+    <section>
         <div class="container2">
             <div class="circulo"></div>
             <p></p>
         </div>
-        <!--
-        <div class="logar">
-            <form action="" class="login">
-                <h3>Login</h3>
-                <label for="email">Email:</label>
-                <input type="text"> <br>
-                <label for="password">Senha:</label>
-                <input type="password"> <br>
-                <button type="submit">Entrar</button>
-            </form>
-            <form action="" class="cadastro">
-                <h3>Cadastro</h3>
-                <label for="nome">Nome:</label>
-                <input type="text"> <br>
-                <label for="user">Usuário:</label>
-                <input type="text"> <br>
-                <label for="email">Email:</label>
-                <input type="text"> <br>
-                <label for="password">Senha:</label>
-                <input type="password"> <br>
-                <label for="password">Confirmar senha:</label>
-                <input type="password"> <br>
-                <button type="submit">Avançar</button>
-            </form>
-        </div>
-        -->
-    </main>
+    </section>
+
+    <!--Seção de Desenvolvedores do site :D-->
     <aside class="desenvolvedores">
-        <h2>Quem Somos Nós</h2>
-        <div>
-            <section class="dev" id="evelim">
+        <h2>Quem Somos</h2>
+        <section>
+            <!--Web designer-->
+            <div class="dev" id="evelim">
                 <img src="./assets/imagens/evelim.jpeg" alt="dev evelim">
                 <h3>Evelim Bacury</h3>
                 <h4>Web Developer</h4>
@@ -123,8 +107,9 @@
                         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
                     </svg>
                 </a>
-            </section>
-            <section class="dev" id="igor">
+            </div>
+            <!--Designer-->
+            <div class="dev" id="igor">
                 <img src="./assets/imagens/igor.jpeg" alt="dev igor">
                 <h3>Igor da Silva</h3>
                 <h4>Designer</h4>
@@ -134,16 +119,16 @@
                         <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
                     </svg>
                 </a>
-            </section>
-        </div>
+            </div>
+        </section>
     </aside>
     <footer>
-        <div>
-            <section class="containerLogo">
-                <img class="logo" src="./assets/imagens/logo-twiceapp.svg" alt="Imagem da logo 'Twice App'">
-                <h2 class="textoDa Logo1">TWICE APP</h1>
-            </section>
-            <section class="canaisOficiais">
+        <section class="containerFooter">
+            <div>
+                <img class="logo" style="margin: 0;" src="./assets/imagens/logo-twiceapp.svg" alt="Imagem da logo 'Twice App'">
+                <h2 class="textoDaLogo">TWICE APP</h1>
+            </div>
+            <div class="canaisOficiais">
                 <h4>Canais oficiais do Twice</h4>
                 <!--Youtube-->
                 <a href="https://www.youtube.com/channel/UCzgxx_DM2Dcb9Y1spb9mUJA">
@@ -171,10 +156,9 @@
                 </a> <br>
                 <a href="https://twice.jype.com/">TWICE'page</a>
                 <a href="https://fans.jype.com/Portal">Fan's</a>
-            </section>
-            <p>Copyright © <span>JYP</span> ENTERTAINMENT Co., Ltd. All rights reserved.</p>
-        </div>
-
+            </div>
+            <p>Copyright © <span id="jyp">JYP</span> ENTERTAINMENT Co., Ltd. All rights reserved.</p>
+        </section>
     </footer>
 </body>
 </html>
